# seticore

./: .dockerignore  .gitignore  .gitmodules  BERKELEY.md  CMakeLists.txt  DATA.md  Dockerfile  Makefile  README.md  beamformer.cu  beamformer.h  beamformer_test.cpp  beamforming_config.cpp  beamforming_config.h  beamforming_integration_test.cpp  beamforming_pipeline.cpp  beamforming_pipeline.h  berkeley_make.sh  bl_make.sh  blockls.cpp  build.sh  complex_buffer.cu  complex_buffer.h  crosscheck.py  cuda_util.cu  cuda_util.h  dat_file.cpp  dat_file.h  dat_file_writer.cpp  dat_file_writer.h  dedoppler.cu  dedoppler.h  dedoppler_benchmark.cpp  dedoppler_hit.cpp  dedoppler_hit.h  dedoppler_hit_group.cpp  dedoppler_hit_group.h  dedoppler_test.cpp  deploy_meerkat.sh  device_raw_buffer.cu  (+104 more)
catch/: README.md
data/: .gitignore  golden.txt  voyager.hits
python/: README.md  crosscheck.py  example.ipynb  pyproject.toml  requirements.txt  viewer.py
python/src/SeticorePy/: __init__.py  viewer.py
python/src/SeticorePy/schema/: hit.capnp  stamp.capnp
python/src/seticore/: crosscheck.py  viewer.py
python/src/seticore/schema/: stamp.capnp
